# VulkanCompositor

./: CMakeLists.txt  LICENSE
cmake/: GlfwConfig.cmake  VulkanCompositorConfig.cmake
demo/: CMakeLists.txt  Main.cpp
demo/cmake/: VulkanCompositorDemoConfig.cmake
include/: Compositor.hpp  Device.hpp  Helpers.hpp  Ipc.hpp  Render.hpp  Structs.hpp  Window.hpp
shaders/: shader.frag  shader.vert
sources/: Compositor.cpp  Device.cpp  Render.cpp  Structs.cpp  Window.cpp
